# Land-It

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/: __init__.py  auth_deps.py  config.py  db.py  dependencies.py  lemma_client.py  main.py
backend/agents/: __init__.py  llm.py
backend/agents/coach/: __init__.py  agent.py  answer_grader.py  prompts.py  question_generator.py  readiness_scorer.py  session_tracker.py  story_bank.py
backend/agents/pitcher/: __init__.py  agent.py  company_researcher.py  outreach_generator.py  prompts.py  voice_analyzer.py
backend/agents/planner/: agent.py  (+11 more)
backend/api/: __init__.py
backend/fixtures/: demo_data.py
backend/memory/: __init__.py  embedder.py  schemas.py  sqlite_store.py  vector_store.py  version_store.py
backend/orchestration/: __init__.py  graph.py  router.py  state.py  weekly_runner.py
backend/parsers/: __init__.py  jd_parser.py  resume_parser.py  schemas.py
backend/tasks/: __init__.py  agent_tasks.py  celery_app.py  email_tasks.py  scheduler.py
backend/utils/: __init__.py  cache.py  logger.py  pdf_exporter.py  proof_exporter.py  rate_limiter.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: benchmark.py  benchmark_ats.py  run_weekly_planner.py  seed_db.py
supabase/migrations/: 001_initial.sql  002_applications_extended.sql  003_resumes.sql  004_ab_testing.sql  005_calibration.sql
tests/e2e/: test_full_pipeline.py
tests/integration/: test_coach_agent.py  test_pitcher_agent.py  test_planner_graph.py  test_scout_agent.py  test_tailor_agent.py  test_tracker_agent.py
tests/unit/: test_ab_testing.py  test_analytics.py  test_answer_grader.py  test_ats_scorer.py  test_audit_fixes.py  test_batch_scorer.py  test_company_profiles.py  test_demo.py  test_diff_generator.py  test_email_classifier.py  test_fit_scorer.py  test_followup_scheduler.py  test_generic_jds.py  test_interview_predictor.py  test_jd_parser.py  test_new_features.py  test_onboarding.py  test_proof_exporter.py  test_question_generator.py  test_resume_parser.py  test_resume_rewriter.py  test_salary_intel.py  test_scheduler.py  test_skill_gap.py  test_standout_engine.py  test_standout_scorers.py  test_strategy.py  test_version_store.py  test_weightage_engine.py
(+146 files in other folders)
