[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project]
name = "land-it"
version = "0.1.0"
description = "AI Career Co-Pilot — multi-agent job search system"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Parsing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",

    # AI / LLM
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # Vector store
    "chromadb>=0.5.0",

    # Database
    "supabase>=2.9.0",

    # Background tasks
    "celery[redis]>=5.4.0",

    # NLP
    "spacy>=3.7.0",

    # Utilities
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
